--- a/device/Cargo.toml
+++ b/device/Cargo.toml
@@ -10,3 +10,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = "2.33.3"
 ureq = {version = "2.3.0", features = ["json"]}
+chrono = "0.4"
