--- a/device/Cargo.toml
+++ b/device/Cargo.toml
@@ -11,3 +11,6 @@ serde_json = "1.0"
 clap = "2.33.3"
 ureq = {version = "2.3.0", features = ["json"]}
 chrono = "0.4"
+tokio = { version = "1", features = ["full"] }
+rand = "0.8.5"
+uuid = {version = "1.8", features = ["v4"]}
